--- a/applications/dashboard/scss/legacy/_category-settings.scss
+++ b/applications/dashboard/scss/legacy/_category-settings.scss
@@ -34,7 +34,7 @@
     position: absolute;
     top: 0;
     left: 30px;
-    padding: $tree-icon-padding 6px;
+    padding: 6px;
     cursor: pointer;
 
     &:active,
