--- a/applications/dashboard/scss/maps/_dashboard.scss
+++ b/applications/dashboard/scss/maps/_dashboard.scss
@@ -1,13 +1,12 @@
+@import '../src/alert';
 @import '../src/analytics';
 @import '../src/buttons';
 @import '../src/card';
 @import '../src/chart-svg';
 @import '../src/daterangepicker';
 @import '../src/dropdown';
-@import '../src/dropdowns';
 @import '../src/footer';
 @import '../src/forms';
-@import '../src/helpers';
 @import '../src/icons';
 @import '../src/media';
 @import '../src/mixins';
@@ -15,6 +14,7 @@
 @import '../src/nav';
 @import '../src/navbar';
 @import '../src/panel';
+@import '../src/prettyprint';
 @import '../src/scaffold';
 @import '../src/tables';
 @import '../src/toasters';
