--- a/applications/dashboard/scss/src/_icons.scss
+++ b/applications/dashboard/scss/src/_icons.scss
@@ -10,15 +10,15 @@
 //
 // PHP rendering function: `dashboardSymbol(iconSlug, alt, cssClass);`
 //
-// .icon-text - Same color and size as default body text
-// .icon-9 - 9 pixel icon
-// .icon-10 - 10 pixel icon
-// .icon-11 - 11 pixel icon
-// .icon-12 - 12 pixel icon
-// .icon-16 - 16 pixel icon
-// .icon-24 - 24 pixel icon
-// .icon-30 - 10 pixel icon
-// .icon-48 - 48 pixel icon
+// .icon-text - Same color and size as default body text.
+// .icon-9 - 9 pixel icon.
+// .icon-10 - 10 pixel icon.
+// .icon-11 - 11 pixel icon.
+// .icon-12 - 12 pixel icon.
+// .icon-16 - 16 pixel icon.
+// .icon-24 - 24 pixel icon.
+// .icon-30 - 10 pixel icon.
+// .icon-48 - 48 pixel icon.
 //
 // Markup:
 // Here's some text and an icon:
