--- a/applications/dashboard/scss/src/_type.scss
+++ b/applications/dashboard/scss/src/_type.scss
@@ -334,10 +334,10 @@ pre {
 //
 // Applies a semantic color to some text.
 //
-// .text-danger - Danger color
-// .text-warning - Warning color
-// .text-info - Info color
-// .text-success - Success color
+// .text-danger - Danger color.
+// .text-warning - Warning color.
+// .text-info - Info color.
+// .text-success - Success color.
 //
 // Markup:
 // <div class="{{modifier_class}}">
@@ -371,7 +371,7 @@ pre {
 
 // Anchors
 //
-// .reverse-link - makes the hover-color the link color and vice-versa
+// .reverse-link - Makes the hover-color the link color and vice-versa.
 //
 // Markup:
 // <a class="{{modifier_class}}" href="#">I am some text.</a>
@@ -390,9 +390,9 @@ pre {
 //
 // Add some font styling to a block of text.
 //
-// .italic - sets the text font-style to italic
-// .strong - adds a font-weight of 500 to the text
-// .info - makes the text smaller and muted, good for adding meta info to an item
+// .italic - Sets the text font-style to italic.
+// .strong - Adds a font-weight of 500 to the text.
+// .info - Makes the text smaller and muted, good for adding meta info to an item.
 //
 // Markup:
 // <div class="{{modifier_class}}">Here is some text.</div>
@@ -419,7 +419,7 @@ strong,
 
 // List Reset
 //
-// .list-reset - removes list styling
+// .list-reset - Removes list styling.
 //
 // Markup:
 // <ul class="{{modifier_class}}">
